crash.log
Crashlog created at 2018-10-07 15:09:06 -0400

===== MESSAGE:

Haml::SyntaxError: layout /post/:10: syntax error, unexpected '<'
( <i>item[:abstract]</i>
   ^
layout /post/:11: unknown regexp options - ad
layout /post/:11: unmatched close parenthesis: /i>
).to_s).to_s);; _hamlout.buffer << ("\n</i
layout /post/:11: syntax error, unexpected $undefined
amlout.buffer << ("\n</aside>\n".freeze);; end;; _hamlout.bu
                              ^
layout /post/:11: syntax error, unexpected $undefined
hamlout.buffer << ("<article>\n".freeze);; _hamlout.buffer <
                              ^
layout /post/:13: syntax error, unexpected $undefined, expecting ')'
to_s);; _hamlout.buffer << ("\n</article>\n</div>\n".freeze)
                              ^
layout /post/:13: unknown regexp options - dv
layout /post/:13: syntax error, unexpected $undefined
fer << ("\n</article>\n</div>\n".freeze);;_erbout
                              ^
layout /post/:13: unterminated string meets end of file
layout /post/:13: syntax error, unexpected end-of-input, expecting ')'
e>\n</div>\n".freeze);;_erbout
                              ^

===== ITEM BEING COMPILED:

Current item: /blog/compile-time-combinatorics/ (:default representation)

===== STACK TRACE:

  0. /usr/local/lib/ruby/gems/2.4.0/gems/haml-5.0.4/lib/haml/engine.rb:128:in `rescue in render'
  1. /usr/local/lib/ruby/gems/2.4.0/gems/haml-5.0.4/lib/haml/engine.rb:125:in `render'
  2. /usr/local/lib/ruby/gems/2.4.0/gems/nanoc-4.9.9/lib/nanoc/filters/haml.rb:25:in `run'
  3. /usr/local/lib/ruby/gems/2.4.0/gems/nanoc-4.9.9/lib/nanoc/base/services/filter.rb:158:in `setup_and_run'
  4. /usr/local/lib/ruby/gems/2.4.0/gems/nanoc-4.9.9/lib/nanoc/base/services/executor.rb:66:in `layout'
  5. /usr/local/lib/ruby/gems/2.4.0/gems/nanoc-4.9.9/lib/nanoc/base/services/compiler/phases/recalculate.rb:32:in `block in run'
  6. /usr/local/lib/ruby/gems/2.4.0/gems/nanoc-4.9.9/lib/nanoc/base/entities/action_sequence.rb:54:in `block in each'
  7. /usr/local/lib/ruby/gems/2.4.0/gems/nanoc-4.9.9/lib/nanoc/base/entities/action_sequence.rb:54:in `each'
  8. /usr/local/lib/ruby/gems/2.4.0/gems/nanoc-4.9.9/lib/nanoc/base/entities/action_sequence.rb:54:in `each'
  9. /usr/local/lib/ruby/gems/2.4.0/gems/nanoc-4.9.9/lib/nanoc/base/services/compiler/phases/recalculate.rb:27:in `run'
  10. /usr/local/lib/ruby/gems/2.4.0/gems/nanoc-4.9.9/lib/nanoc/base/services/compiler/phases/abstract.rb:21:in `call'
  11. /usr/local/lib/ruby/gems/2.4.0/gems/nanoc-4.9.9/lib/nanoc/base/services/compiler/phases/abstract.rb:23:in `block in call'
  12. /usr/local/lib/ruby/gems/2.4.0/gems/nanoc-4.9.9/lib/nanoc/base/services/compiler/phases/cache.rb:23:in `run'
  13. /usr/local/lib/ruby/gems/2.4.0/gems/nanoc-4.9.9/lib/nanoc/base/services/compiler/phases/abstract.rb:21:in `call'
  14. /usr/local/lib/ruby/gems/2.4.0/gems/nanoc-4.9.9/lib/nanoc/base/services/compiler/phases/abstract.rb:23:in `block in call'
  15. /usr/local/lib/ruby/gems/2.4.0/gems/nanoc-4.9.9/lib/nanoc/base/services/compiler/phases/resume.rb:16:in `block in run'

===== VERSION INFORMATION:

Nanoc 4.9.9 © 2007-2018 Denis Defreyne.
Running ruby 2.4.2 (2017-09-14) on x86_64-darwin16 with RubyGems 2.6.13.

===== SYSTEM INFORMATION:

Darwin andylee 16.7.0 Darwin Kernel Version 16.7.0: Thu Jun 21 20:07:39 PDT 2018; root:xnu-3789.73.14~1/RELEASE_X86_64 x86_64

===== INSTALLED GEMS:

  addressable 2.5.2
  adsf 1.4.1
  bigdecimal 1.3.0
  bundler 1.15.4
  coderay 1.1.2
  colorator 1.1.0
  colored 1.2
  concurrent-ruby 1.0.5
  cri 2.15.1
  ddmemoize 1.0.0
  ddmetrics 1.0.1
  ddplugin 1.0.2
  did_you_mean 1.1.0
  faraday 0.13.1
  ffi 1.9.18
  forwardable-extended 2.6.0
  haml 5.0.4
  hamster 3.0.0
  io-console 0.4.6
  jekyll 3.6.2
  jekyll-feed 0.9.2
  jekyll-gist 1.4.1
  jekyll-paginate 1.1.0
  jekyll-sass-converter 1.5.0
  jekyll-theme-hydeout 3.5.1
  jekyll-watch 1.5.0
  json 2.0.4
  json_schema 0.19.1
  kramdown 1.15.0, 1.17.0
  liquid 4.0.0
  listen 3.0.8
  mercenary 0.3.6
  mini_portile2 2.3.0
  minima 2.1.1
  minitest 5.10.1
  multipart-post 2.0.0
  nanoc 4.9.9
  net-telnet 0.1.1
  nokogiri 1.8.5
  octokit 4.7.0
  openssl 2.0.5
  pandoc-ruby 2.0.2
  parallel 1.12.1
  pathutil 0.16.0
  power_assert 0.4.1
  psych 2.2.2
  public_suffix 3.0.0
  rack 2.0.5
  rake 12.0.0
  rb-fsevent 0.10.2
  rb-inotify 0.9.10
  rb-pygments 0.1.0
  rdoc 5.0.0
  ref 2.0.0
  rouge 2.2.1
  rygments 0.2.0
  safe_yaml 1.0.4
  sass 3.5.2
  sass-listen 4.0.0
  sawyer 0.8.1
  slow_enumerator_tools 1.1.0
  temple 0.8.0
  test-unit 3.2.3
  tilt 2.0.8
  tomlrb 1.2.7
  xmlrpc 0.2.1

===== LOAD PATHS:

  0. /usr/local/lib/ruby/gems/2.4.0/gems/ref-2.0.0/lib
  1. /usr/local/lib/ruby/gems/2.4.0/gems/did_you_mean-1.1.0/lib
  2. /usr/local/lib/ruby/gems/2.4.0/gems/public_suffix-3.0.0/lib
  3. /usr/local/lib/ruby/gems/2.4.0/gems/addressable-2.5.2/lib
  4. /usr/local/lib/ruby/gems/2.4.0/gems/colored-1.2/lib
  5. /usr/local/lib/ruby/gems/2.4.0/gems/cri-2.15.1/lib
  6. /usr/local/lib/ruby/gems/2.4.0/gems/ddmetrics-1.0.1/lib
  7. /usr/local/lib/ruby/gems/2.4.0/gems/ref-2.0.0/lib
  8. /usr/local/lib/ruby/gems/2.4.0/gems/ddmemoize-1.0.0/lib
  9. /usr/local/lib/ruby/gems/2.4.0/gems/ddplugin-1.0.2/lib
  10. /usr/local/lib/ruby/gems/2.4.0/gems/concurrent-ruby-1.0.5/lib
  11. /usr/local/lib/ruby/gems/2.4.0/gems/hamster-3.0.0/lib
  12. /usr/local/lib/ruby/gems/2.4.0/gems/json_schema-0.19.1/lib
  13. /usr/local/lib/ruby/gems/2.4.0/gems/parallel-1.12.1/lib
  14. /usr/local/lib/ruby/gems/2.4.0/gems/slow_enumerator_tools-1.1.0/lib
  15. /usr/local/lib/ruby/gems/2.4.0/gems/tomlrb-1.2.7/lib
  16. /usr/local/lib/ruby/gems/2.4.0/gems/nanoc-4.9.9/lib
  17. /usr/local/lib/ruby/gems/2.4.0/gems/pandoc-ruby-2.0.2/lib
  18. /usr/local/lib/ruby/gems/2.4.0/gems/mini_portile2-2.3.0/lib
  19. /usr/local/lib/ruby/gems/2.4.0/gems/nokogiri-1.8.5/lib
  20. /usr/local/lib/ruby/gems/2.4.0/extensions/x86_64-darwin-16/2.4.0/nokogiri-1.8.5
  21. /usr/local/lib/ruby/gems/2.4.0/gems/coderay-1.1.2/lib
  22. /usr/local/lib/ruby/gems/2.4.0/gems/temple-0.8.0/lib
  23. /usr/local/lib/ruby/gems/2.4.0/gems/tilt-2.0.8/lib
  24. /usr/local/lib/ruby/gems/2.4.0/gems/haml-5.0.4/lib
  25. /usr/local/lib/ruby/site_ruby/2.4.0
  26. /usr/local/lib/ruby/site_ruby/2.4.0/x86_64-darwin16
  27. /usr/local/lib/ruby/site_ruby
  28. /usr/local/lib/ruby/vendor_ruby/2.4.0
  29. /usr/local/lib/ruby/vendor_ruby/2.4.0/x86_64-darwin16
  30. /usr/local/lib/ruby/vendor_ruby
  31. /usr/local/Cellar/ruby/2.4.2/lib/ruby/2.4.0
  32. /usr/local/Cellar/ruby/2.4.2/lib/ruby/2.4.0/x86_64-darwin16
